--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
           <div class="col-md-9" style="padding: 0 30px;">
             <div class="col-md-12 row" style=" margin-right: 10px; border-bottom: 2px solid black; padding: 0;">
               <div class="col-md-2" id="back-button">
-                <img src="/img/back-image.png" alt="back-image">
+                <img src="img/back-image.png" alt="back-image">
               </div>  
               <h2 class="col-md-8" id="article-title">article title</h2>
               <div class="col-md-2" id="foward-button">
-                <img src="/img/foward-image.png" alt="foward-image">
+                <img src="img/foward-image.png" alt="foward-image">
               </div>
             </div>
             <div class="col-md-12" id="article">
@@ -137,7 +137,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/js/jquery-3.5.0.min.js"></script>
+    <script src="js/jquery-3.5.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/js.js"></script>
