--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a class="nnav-item" href="#">Historie</a>
             </li>
             <li>
-              <a class="nnav-item" href="#">Zajímavosti</a>
+              <a class="nnav-item" href="#">Geografie</a>
             </li>
             <li>
               <a class="nnav-item" href="#">Souhrn</a>
@@ -58,7 +58,15 @@
         <div class="col-md-2"></div>
 
       </div>
-      <div class="tab"></div>
+      <div class="tab">
+         <div class="container">
+           <div id="secnav" class="">
+             <div>Learn</div>
+             <div>Quiz</div>
+           </div>
+            <div id="map" width="100%"></div>
+         </div>
+      </div>
       <div class="tab row">
         <div class="col-md-2" name="panell"></div>
         <div class="col-md-8 row" name="panell">
@@ -138,11 +146,14 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.5.0.min.js"></script>
+    <script src="js/anime.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/js.js"></script>
     <!--<script src="js/selectors.js"></script>-->
     <script src="js/historie.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/geograife.js"></script>
     
   </body>
 </html>
